# finance_parser

./: .gitignore  Cargo.toml  README.md  hk.pkl
.github/workflows/: rust-ci.yml
src/: args.rs  bin_parser.rs  csv_parser.rs  error.rs  lib.rs  main.rs  txt_parser.rs
tests/: parsers.rs  utils.rs
