[package]
name = "finance_parser"
authors=["@PhilYaren <https://github.com/PhilYaren>"]
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ya_parser"
path = "src/main.rs"

[[bin]]
name = "comparator"
path = "src/bin/comparator/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
